[package]
name = "poe-decompressor"
version = "0.1.0"
authors = ["Antonio <antonio.iaccarino@weareroam.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
brotli-decompressor = "2.3.0"
pbr = "1.0.2"